crates/knf/tests/snapshots/cli__fail_locked_path_error.snap
---
source: crates/knf/tests/cli.rs
expression: "run_err(&dir, &[\"base.toml\", \"prod.toml\", \"--fail\", \"db.host\"])"
---
error: `db.host` is locked: an earlier layer already set it
help: --fail pins a path to the first layer that sets it; drop the flag or the later value
