crates/knf/tests/snapshots/cli__fail_locks_a_set_layer_too.snap
---
source: crates/knf/tests/cli.rs
assertion_line: 435
expression: "run_err(&dir, &[\"base.toml\", \"--fail\", \"db.host\", \"--set\", \"db.host=x\"])"
---
error: `db.host` is locked: an earlier layer already set it
help: --fail pins a path to the first layer that sets it; drop the flag or the later value
