crates/knf/tests/snapshots/cli__malformed_index_error.snap
---
source: crates/knf/tests/cli.rs
expression: "run_err(&dir, &[\"f.json\", \"--interpolate\"])"
---
error: invalid reference
  --> t: malformed index in reference `${tags[x]}`
help: a reference is `${key.path}` (with `[n]` for array elements) or `${env:NAME}`; write `$$` for a literal `$`
help: drop --interpolate to pass `${...}` through untouched
