crates/knf/tests/snapshots/cli__merge_key_cycle.snap
---
source: crates/knf/tests/cli.rs
expression: "run_err(&dir, &[\"cycle.json\", \"-i\", \"-m\", \"extends\"])"
---
error: reference cycle: `bar` -> `bar`
help: a reference may not resolve, directly or indirectly, to itself
