crates/knf/tests/snapshots/cli__mixed_input_formats_error.snap
---
source: crates/knf/tests/cli.rs
assertion_line: 1261
expression: "run_err(&dir, &[\"a.toml\", \"b.json\"])"
---
error: inputs mix JSON and TOML formats; layers must use one format
help: merge JSON layers and TOML layers separately
