crates/knf/tests/snapshots/cli__mixed_input_formats_error_precedes_merge_errors.snap
---
source: crates/knf/tests/cli.rs
assertion_line: 1271
expression: "run_err(&dir, &[\"a.json\", \"b.toml\", \"--strict\"])"
---
error: inputs mix JSON and TOML formats; layers must use one format
help: merge JSON layers and TOML layers separately
